fixed a text overlap issue

--- a/styles.css
+++ b/styles.css
@@ -52,7 +52,7 @@ body
 {
     position: absolute;
     top: 490px;
-    width: 35%;
+    width: 40%;
     font-size: 20px;
     text-align: center;
     color: rgb(87, 26, 18);
